crates/vega-codegen/tests/compile_errors/more_than_three_numbers.rs
vega_codegen::algebra!(1, 2, 3, 4);

fn main() {
    eprintln!("This is nothing");
}
